Fixed some alignment

--- a/src/templates/aboutPage/aboutPage.module.scss
+++ b/src/templates/aboutPage/aboutPage.module.scss
@@ -87,14 +87,14 @@
 
     & > p:first-of-type {
       width: 40px;
-      grid-column: 3;
+      grid-column: 2;
       grid-row: 2;
       border-bottom: solid $vibrantBlue;
       padding: 10px 0;
     }
 
     h2 {
-      grid-column: 3 / span 6;
+      grid-column: 2 / span 8;
       grid-row: 3;
       width: 100%;
       margin: 20px 0;
@@ -105,7 +105,7 @@
       grid-row: 4;
       display: flex;
       flex-flow: row wrap;
-      justify-content: space-around;
+      justify-content: space-between;
       align-content: center;
       margin: $XL auto 0 auto;
       width: 100%;
@@ -162,6 +162,14 @@
       }
     }
     .aboutEmployees {
+      & > p:first-of-type {
+        grid-column: 3;
+      }
+
+      h2 {
+        grid-column: 3 / span 6;
+      }
+
       .employeeWrapper {
         max-width: 800px;
         justify-content: space-around;
